--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
     <span>ℹ️</span>
     <div>
       Data tilang diperbarui setiap <strong>Jumat pagi</strong> oleh petugas Pengadilan Negeri Baubau.
-      Jika nama Anda tidak ditemukan, silakan hubungi langsung Kepaniteraan Pengadilan Negeri Baubau.
+      Jika nama Anda tidak ditemukan, silakan hubungi langsung Kepaniteraan Pidana Pengadilan Negeri Baubau.
     </div>
   </div>
 
@@ -757,9 +757,9 @@
 <!-- FOOTER -->
 <footer>
   <strong>Pengadilan Negeri Baubau Kelas IB</strong><br>
-  Jl. Betoambari No. 1, Kota Baubau, Sulawesi Tenggara<br>
+  Jl. Betoambari No. 57, Kota Baubau, Sulawesi Tenggara<br>
   <span class="divider">|</span> Data diperbarui setiap Jumat pagi <span class="divider">|</span>
-  Sistem Informasi Tilang v2.0
+  Sistem Informasi Tilang <span class="divider">|</span> @TIM IT PN BAUBAU
 </footer>
 
 <!-- MODAL -->
