--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
   <strong>Pengadilan Negeri Baubau Kelas IB</strong><br>
   Jl. Betoambari No. 57, Kota Baubau, Sulawesi Tenggara<br>
   <span class="divider">|</span> Data diperbarui setiap Jumat pagi <span class="divider">|</span>
-  Sistem Informasi Tilang <span class="divider">|</span> @TIM IT PN BAUBAU
+  Sistem Informasi Tilang <span class="divider">|</span> TIM IT PN BAUBAU
 </footer>
 
 <!-- MODAL -->
